# simdutf8

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.rs  expected-methods-x86-auto.txt  expected-methods-x86-avx2.txt  expected-methods-x86-nostd-fallback.txt  expected-methods-x86-std.txt  release.toml  rustfmt.toml  wasm32-development.md
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  cross.yml  pull-request.yml  rust.yml  wasm.yml
afl/: .gitignore  Cargo.toml
baselines/: auto-cpucheck.json  auto-long.json  auto-switch.json  auto-unsafe-long.json  auto-unsafe.json  auto.json  avx2-long.json  avx2.json  compat-auto.json  compat-avx2.json  new+auto.json  new+avx2.json  pure-auto.json  pure-avx2.json  simd+avx2.json  simd+sse42.json  std+avx2.json  std.json
bench/: BENCHMARKING.md  Cargo.toml  build.rs
bench/baselines/: basic.json  compat-auto.json  compat-avx2.json  compat.json  pure-auto.json  pure-avx2.json  pure.json  simdjson-clang.json  simdjson.json  std-avx2.json
bench/baselines/amd/: basic-v0.1.0.json  basic-v0.1.1-noinline.json  basic-v0.1.1.json  compat-v0.1.0.json  compat-v0.1.1.json  simdjson-clang.json  std.json
bench/baselines/apple-m1-macos/: basic-noinline-v0.1.2.json  basic-v0.1.2.json  compat-v0.1.2.json  simdjson-clang.json  std.json
bench/baselines/apple-m1max-macos/: basic-native.json  basic-portable-128.json  basic-portable.json
bench/baselines/cometlake-win/: basic-std.json  basic-v0.1.1-noinline.json  basic-v0.1.1.json  basic.json  compat-v0.1.1.json  compat.json  pure-std64.json  pure.json  simdjson-clang.json  simdjson-gcc.json  std-noinline.json  std.json  wsl-basic-v0.1.1-noinline.json  wsl-simdjson-clang.json  wsl-simdjson-gcc.json
bench/baselines/cometlake-win/prefetch/: basic-aligned-noprefetch.json  basic-aligned-prefetch.json  basic-unaligned-noprefetch.json  basic-unaligned-prefetch.json
bench/baselines/other/: simdjson-gcc-aligned-8mod64.json  simdjson-gcc-unligned.json  std.json
bench/baselines/zen2-linux/: basic-noinline-v0.1.2.json  basic-v0.1.0.json  basic-v0.1.1-noinline.json  basic-v0.1.1.json  basic-v0.1.2.json  compat-v0.1.0.json  compat-v0.1.1.json  compat-v0.1.2.json  simdjson-clang.json  simdjson-gcc.json  std.json
bench/benches/: cpb_basic.rs  cpb_compat.rs  cpb_simdjson.rs  cpb_std.rs  cpb_std_noinline.rs  small_basic.rs  small_compat.rs  small_std.rs  throughput_basic.rs  throughput_basic_noinline.rs  throughput_basic_portable.rs  throughput_compat.rs  throughput_compat_portable.rs  throughput_pure.rs  throughput_simdjson.rs  throughput_std.rs  throughput_std_noinline.rs  throughput_wasm_basic.rs  throughput_wasm_compat.rs  throughput_wasm_std.rs  throughput_wasmer_basic.rs  throughput_wasmer_compat.rs  throughput_wasmer_std.rs  throughput_wasmtime_basic.rs  throughput_wasmtime_compat.rs  throughput_wasmtime_std.rs
bench/benches/common/: macros.rs  mod.rs
bench/benches/text/: Arabic-Lipsum.txt  Emoji-Lipsum.txt  Hindi-Lipsum.txt
bench/data/: Chinese-Lipsum.txt  Korean-Lipsum.txt  Latin-Lipsum.txt  Russian-Lipsum.txt
bench/simdjson-utf8/: Cargo.toml  build.rs
bench/simdjson-utf8/src/: lib.rs
bench/src/: lib.rs  macros.rs  wasm.rs
bench/src/wasm/: mod.rs  wasmer.rs  wasmtime.rs
bench/wasm-shim/: Cargo.toml  README.md
bench/wasm-shim/.cargo/: config.toml
bench/wasm-shim/src/: lib.rs
benches/: benchmark.rs  common.rs  cpb.rs  cpb_compat.rs  cpb_exact.rs  cpb_pure.rs  throughput_compat.rs  throughput_exact.rs  throughput_fast.rs  throughput_pure.rs
benches/common/: mod.rs
benches/text/: Arabic-Lipsum.txt  Chinese-Lipsum.txt  Emoji-Lipsum.txt  Hebrew-Lipsum.txt  Japanese-Lipsum.txt  Korean-Lipsum.txt  Latin-Lipsum.txt  Russian-Lipsum.txt
divan/: Cargo.toml
divan/benches/: basic.rs
divan/src/: lib.rs
examples/: streaming.rs
faux-expect/: Cargo.toml
faux-expect/src/: lib.rs
fuzz/: Cargo.toml
fuzz/targets/: all.rs  auto.rs  auto_basic.rs  auto_compat.rs  auto_exact.rs  auto_pure.rs
fuzzing/: Cargo.toml
fuzzing/afl/: Cargo.toml
fuzzing/common/: Cargo.toml
fuzzing/common/src/: lib.rs
fuzzing/fuzz/: Cargo.toml
fuzzing/fuzz/targets/: simd.rs
fuzzing/honggfuzz/: .gitignore  Cargo.toml
fuzzing/src/: lib.rs
inlining/: check-inlining.sh  expected-methods-aarch64-neon.txt  expected-methods-armv7-neon.txt  expected-methods-armv7-std.txt  expected-methods-wasm32-simd128.txt  expected-methods-x86-nostd-avx2.txt  expected-methods-x86-nostd-avx512.txt  expected-methods-x86-nostd-fallback.txt  expected-methods-x86-nostd-sse41.txt  expected-methods-x86-nostd-sse42.txt  expected-methods-x86-std-avx2.txt  expected-methods-x86-std-old.txt  expected-methods-x86-std.txt
nightly_workspace/: Cargo.toml
portable/: .gitignore  .prettierrc.toml  Cargo.toml  README.md
portable/baseline/: basic.s  compat.s
portable/src/: basic.rs  compat.rs  lib.rs
portable/src/implementation/: algorithm.rs  fallback.rs  helpers.rs  mod.rs  simd.rs
portable/src/implementation/portable/: algorithm_new.rs  algorithm_safe.rs  mod.rs  simd128.rs  simd256.rs
portable/tests/: tests.rs
src/: TODO.md  basic.rs  compat.rs  err.rs  lib.rs  macros.rs  pure.rs  tests.rs  utf8check.rs
src/avx2/: implementation.rs  mod.rs  stage1.rs  utf8check.rs
src/implementation/: aarch64.rs  algorithm.rs  algorithm_macros.rs  avx2.rs  helpers.rs  macros.rs  mod.rs  portable.rs  sse42.rs  utf8check.rs
src/implementation/aarch64/: mod.rs  neon.rs
src/implementation/arm/: aarch64.rs  mod.rs  neon.rs
src/implementation/armv7/: mod.rs  neon.rs
src/implementation/portable/: mod.rs  portable.rs  simd128.rs  simd256.rs
src/implementation/wasm32/: mod.rs  simd128.rs
src/implementation/x86/: avx2.rs  avx512.rs  mod.rs  sse41.rs  sse42.rs
src/sse42/: implementation.rs  stage1.rs  utf8check.rs
tests/: common.rs  from_utf8.rs  streaming_validation.rs  tests.rs
