[package]
name = "simdutf8"
version = "0.1.1"
authors = ["Hans Kratz <hans@appfour.com>"]
edition = "2018"
description = "SIMD-accelerated UTF-8 validation."
documentation = "https://docs.rs/simdutf8/"
homepage = "https://github.com/rusticstuff/simdutf8"
repository = "https://github.com/rusticstuff/simdutf8"
readme = "README.md"
keywords = ["utf-8", "unicode", "string", "validation", "simd"]
categories = ["encoding", "algorithms", "no-std"]
license = "Apache-2.0"
exclude = ["/.github", "/.vscode", "/bench", "/afl", "/fuzz", "/img", "expected-methods-*.txt"]

[features]
default = ["std"]

# enable CPU feature detection, on by default, turn off for no-std support
std = []

# expose SIMD implementations in basic::imp::* and compat::imp::*
public_imp = []

# use branch hints - requires nightly
hints = []

[package.metadata.docs.rs]
features = ["public_imp"]
rustdoc-args = ["--cfg", "docsrs"]
