[package]
name = "simdutf8"
version = "0.1.5"
authors = ["Hans Kratz <hans@appfour.com>"]
edition = "2018"
description = "SIMD-accelerated UTF-8 validation."
documentation = "https://docs.rs/simdutf8/"
homepage = "https://github.com/rusticstuff/simdutf8"
repository = "https://github.com/rusticstuff/simdutf8"
readme = "README.md"
keywords = ["utf-8", "unicode", "string", "validation", "simd"]
categories = ["encoding", "algorithms", "no-std"]
license = "MIT OR Apache-2.0"
exclude = [
    "/.gitignore",
    "/.github",
    "/.vscode",
    "/bench",
    "/fuzzing",
    "/img",
    "/inlining",
    "TODO.md",
]

[features]
default = ["std"]

# enable CPU feature detection, on by default, turn off for no-std support
std = []

# expose SIMD implementations in basic::imp::* and compat::imp::*
public_imp = []

# aarch64 NEON SIMD implementation - only necessary for Rust 1.59 and Rust 1.60
aarch64_neon = []

# enable aarch64 prefetching for minor speedup - requires nightly
aarch64_neon_prefetch = []

# features for the portable SIMD implementation (nightly only)

# enable the portable SIMD public implementation, requires public_imp to be enabled as well
portable_public_imp = []

# use the portable SIMD implementation when no architecture-specific implementation is available
portable_fallback = []

# always use the portable SIMD implementation, even if an architecture-specific implementation is available
portable_override = []

# deprecated - does not do anything
hints = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu", "wasm32-unknown-unknown", "wasm32-wasip1"]

[dependencies]
flexpect = "0.0.4"
