[package]
name = "simdutf8-bench"
version = "0.0.1"
authors = ["Hans Kratz <hans@appfour.com>"]
edition = "2018"
description = "simdutf8 benchmark package"
documentation = "https://docs.rs/simdutf8/"
homepage = "https://github.com/rusticstuff/simdutf8"
repository = "https://github.com/rusticstuff/simdutf8"
license = "Apache-2.0"

[features]
simdjson = [ "simdjson-utf8" ]
cpb = [ "criterion-cycles-per-byte" ]

[dependencies]
core_affinity = "0.5"
criterion = "0.3"
simdutf8 = { version = "*", path = ".." }
criterion-cycles-per-byte = { version = "0.1.2", optional = true }
simdjson-utf8 = { version = "*", path = "simdjson-utf8", optional = true }

[[bench]]
name = "throughput_basic"
harness = false

[[bench]]
name = "throughput_basic_noinline"
harness = false

[[bench]]
name = "throughput_compat"
harness = false

[[bench]]
name = "throughput_std"
harness = false

[[bench]]
name = "throughput_simdjson"
harness = false
required-features = ["simdjson"]

[[bench]]
name = "cpb_basic"
harness = false
required-features = ["cpb"]

[[bench]]
name = "cpb_compat"
harness = false
required-features = ["cpb"]

[[bench]]
name = "cpb_std"
harness = false
required-features = ["cpb"]

[[bench]]
name = "cpb_simdjson"
harness = false
required-features = ["cpb", "simdjson"]
