[package]
name = "simdutf8-bench"
version = "0.0.1"
authors = ["Hans Kratz <hans@appfour.com>"]
edition = "2018"
description = "simdutf8 benchmark package"
documentation = "https://docs.rs/simdutf8/"
homepage = "https://github.com/rusticstuff/simdutf8"
repository = "https://github.com/rusticstuff/simdutf8"
license = "MIT OR Apache-2.0"

[features]
simdjson = ["simdjson-utf8"]

# Enable wasm benchmarking
simdutf8_wasmer = ["wasmer"]
simdutf8_wasmer_cranelift = [
    "simdutf8_wasmer",
    "wasmer/default-cranelift",
    "wasmer/default-universal",
]
simdutf8_wasmer_llvm = [
    "simdutf8_wasmer",
    "wasmer/default-llvm",
    "wasmer/default-universal",
]
simdutf8_wasmtime = ["wasmtime"]

[dependencies]
core_affinity = "0.8.1"
criterion = "0.8.1"
simdutf8 = { version = "*", path = "..", features = ["aarch64_neon"] }
simdutf8-portable = { version = "*", path = "../portable" }
simdjson-utf8 = { version = "*", path = "simdjson-utf8", optional = true }
# default is cranelift which is not as performant as the llvm backend
wasmer = { version = "2.1", optional = true, default-features = false }
wasmtime = { version = "0.32", optional = true }

[[bench]]
name = "throughput_basic"
harness = false

[[bench]]
name = "throughput_basic_noinline"
harness = false

[[bench]]
name = "throughput_compat"
harness = false

[[bench]]
name = "throughput_basic_portable"
harness = false

[[bench]]
name = "throughput_compat_portable"
harness = false

[[bench]]
name = "throughput_std"
harness = false

[[bench]]
name = "throughput_simdjson"
harness = false
required-features = ["simdjson"]

[[bench]]
name = "throughput_wasmer_std"
harness = false
required-features = ["simdutf8_wasmer"]

[[bench]]
name = "throughput_wasmer_compat"
harness = false
required-features = ["simdutf8_wasmer"]

[[bench]]
name = "throughput_wasmer_basic"
harness = false
required-features = ["simdutf8_wasmer"]

[[bench]]
name = "throughput_wasmtime_std"
harness = false
required-features = ["simdutf8_wasmtime"]

[[bench]]
name = "throughput_wasmtime_compat"
harness = false
required-features = ["simdutf8_wasmtime"]

[[bench]]
name = "throughput_wasmtime_basic"
harness = false
required-features = ["simdutf8_wasmtime"]
