[package]
name = "simdutf8-fuzz"
version = "0.0.1"
authors = ["Hans Kratz <hans@appfour.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "*"

[dependencies.simdutf8]
path = ".."
features = [ "public_imp" ]

[[bin]]
name = "auto_basic"
path = "targets/auto_basic.rs"
doc = false
test = false

[[bin]]
name = "auto_compat"
path = "targets/auto_compat.rs"
doc = false
test = false

[[bin]]
name = "all"
path = "targets/all.rs"
doc = false
test = false