[package]
name = "simdutf8-portable"
version = "0.0.1"
authors = ["Hans Kratz <hans@appfour.com>"]
edition = "2024"
description = "SIMD-accelerated UTF-8 validation using core::simd (experimental)"
documentation = "https://docs.rs/simdutf8-portable/"
homepage = "https://github.com/rusticstuff/simdutf8/tree/main/portable"
repository = "https://github.com/rusticstuff/simdutf8"
readme = "README.md"
keywords = ["utf-8", "unicode", "string", "validation", "simd"]
categories = ["encoding", "algorithms", "no-std"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]

std = []

# expose SIMD implementations in basic::imp::* and compat::imp::*
public_imp = []

# features to force a certain implementation. Features earlier in the list take
# precedence.

# force non-SIMD fallback implementation (for testing)
force_fallback = []
# force 128-bit/256-bit SIMD implementation.
# CAVE: slower than even the fallback implementation if not all SIMD functions
# have a fast implementation, in particular `swizzle_dyn` needs to be fast.
force_simd128 = []
force_simd256 = []

[package.metadata.docs.rs]
features = ["public_imp"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cfg-if = "1.0.0"
